--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,63 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   color: #434455;
   background-color: #fff;
+  padding: 15px;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul,
+ol {
+  list-style-type: none;
+  margin: 0;
+  padding-left: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover,
+a:focus {
+  color: #404BBF
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.container {
+  max-width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.header {
+  border-bottom: 1px solid #e7e9fc;
+  background: #fff;
 }
 
 .logo {
@@ -15,25 +70,30 @@ body {
   color: #4d5ae5;
 }
 
-.header-logo .logo-accent {
+.header-logo {
+  padding: 24px 0;
+  margin-right: 76px;
+}
+
+.logo-accent {
   color: #2E2F42;
 }
 
-ul {
-  list-style-type: none;
+.header-nav {
+  display: flex;
+  align-items: center;
+  background-color: #fff;
 }
 
-a {
-  text-decoration: none;
+.header-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;
 }
-
-a:hover,
-a:focus {
-  color: #404BBF
-}
-
 
 .header-list-link {
+  display: block;
+  padding: 24px 0;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -41,31 +101,41 @@ a:focus {
 }
 
 .header-address {
+  margin-left: auto;
   font-style: normal;
 }
 
-
+.header-address-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
 
 .address-list-link {
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+  display: block;
+  padding: 24px 0;
   color: #434455;
 }
 
-.main {
+.main-section {
   background-color: #2E2F42;
+  padding: 188px 0px;
+
 }
 
-.main-title {
+.main-section-title {
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+  max-width: 496px;
+  margin: 0 auto;
+  margin-bottom: 48px;
 }
 
-.main-button {
+.button {
   background-color: #4D5AE5;
   font-weight: 500;
   font-size: 16px;
@@ -73,11 +143,45 @@ a:focus {
   letter-spacing: 0.04em;
   color: #fff;
   cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  padding: 16px 32px;
+  min-width: 169px;
+  height: 56px;
+  margin: 0 auto;
+}
+
+.main-button {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: row;
+  gap: 10px;
 }
 
 .main-button:hover,
 .main-button:focus {
   background-color: #404BBF;
+}
+
+.features {
+  padding: 188px 0;
+}
+
+.features-list {
+  display: flex;
+  gap: 24px;
+}
+
+.features-list-item {
+  width: calc((100% - (3 * 24px)) / 4);
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 8px;
+
+
 }
 
 .features-subtitle {
@@ -89,12 +193,20 @@ a:focus {
 }
 
 .features-desc {
+  font-weight: 400;
+  font-size: 16px;
+  color: #434455;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
 
 .team {
   background-color: #F4F4FD;
+}
+
+.team-container {
+  padding: 120px 0;
+  margin: 0 auto;
 }
 
 .team-title {
@@ -105,17 +217,28 @@ a:focus {
   text-align: center;
   color: #2E2F42;
   text-transform: capitalize;
+  padding-bottom: 72px;
 }
 
 .team-list {
-  background-color: #fff;
+  display: flex;
+  gap: 24px;
 }
+
 
 .team-list-item {
   background-color: #fff;
 }
 
+.desc {
+  text-align: center;
+  width: 264px;
+  padding: 32px 16px;
+  box-sizing: border-box;
+}
+
 .team-subtitle {
+
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -128,6 +251,11 @@ a:focus {
   letter-spacing: 0.02em;
 }
 
+.portfolio {
+  min-width: 1128px;
+  padding: 120px 0;
+}
+
 .portfolio-title {
   font-weight: 700;
   font-size: 36px;
@@ -136,10 +264,33 @@ a:focus {
   text-align: center;
   color: #2E2F42;
   text-transform: capitalize;
+  margin-bottom: 72px;
+}
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px 24px;
 }
 
 .portfolio-list-item {
   background-color: #fff;
+  flex-basis: calc((100% - 48px) / 3)
+}
+
+.card-desc {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 8px;
+  padding: 32px 16px;
+
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+  padding: 32px 16px;
+  width: 360px;
+  height: 120px;
 }
 
 .portfolio-subtitle {
@@ -155,11 +306,13 @@ a:focus {
   letter-spacing: 0.02em;
 }
 
-.footer {
-  background-color: #2E2F42;
+.footer-container {
+  padding: 100px 15px;
+  background-color: #2E2F42
 }
 
 .footer-logo {
+  display: inline-block;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -167,6 +320,7 @@ a:focus {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  margin-bottom: 16px;
 }
 
 .footer-logo-accent {
@@ -179,4 +333,6 @@ a:focus {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  width: 264px;
+  height: 72px;
 }
