--- a/css/styles.css
+++ b/css/styles.css
@@ -167,167 +167,183 @@ img {
   padding: 188px 0;
 }
 
-.features-list {
-  display: flex;
-  gap: 24px;
-}
+.vissualy-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 
-.features-list-item {
-  width: calc((100% - (3 * 24px)) / 4);
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-direction: column;
-  gap: 8px;
+  .features-list {
+    display: flex;
+    gap: 24px;
+  }
 
-
-}
-
-.features-subtitle {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2E2F42;
-}
-
-.features-desc {
-  font-weight: 400;
-  font-size: 16px;
-  color: #434455;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-}
-
-.team {
-  background-color: #F4F4FD;
-  margin: 0 auto;
-  padding: 120px 0;
-}
-
-.team-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #2E2F42;
-  text-transform: capitalize;
-  margin-bottom: 72px;
-}
-
-.team-list {
-  display: flex;
-  gap: 24px;
-}
+  .features-list-item {
+    width: calc((100% - (3 * 24px)) / 4);
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 8px;
 
 
-.team-list-item {
-  background-color: #fff;
-}
+  }
 
-.desc {
-  text-align: center;
-  width: 264px;
-  padding: 32px 16px;
-  box-sizing: border-box;
-}
+  .features-subtitle {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+  }
 
-.team-subtitle {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2E2F42;
-}
+  .features-desc {
+    font-weight: 400;
+    font-size: 16px;
+    color: #434455;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
 
-.team-subtitle-desc {
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-}
+  .team {
+    background-color: #F4F4FD;
+    margin: 0 auto;
+    padding: 120px 0;
+  }
 
-.portfolio {
-  min-width: 1128px;
-  padding: 120px 0;
-}
+  .team-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2E2F42;
+    text-transform: capitalize;
+    margin-bottom: 72px;
 
-.portfolio-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #2E2F42;
-  text-transform: capitalize;
-  margin-bottom: 72px;
-}
+  }
 
-.portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 40px 24px;
-}
+  .team-list {
+    display: flex;
+    gap: 24px;
+  }
 
-.portfolio-list-item {
-  background-color: #fff;
-  flex-basis: calc((100% - 48px) / 3)
-}
 
-.card-desc {
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-  gap: 8px;
-  padding: 32px 16px;
+  .team-list-item {
+    background-color: #fff;
+  }
 
-  border-bottom: 1px solid #e7e9fc;
-  border-left: 1px solid #e7e9fc;
-  border-right: 1px solid #e7e9fc;
-  padding: 32px 16px;
-  width: 360px;
-  height: 120px;
-}
+  .desc {
+    text-align: center;
+    width: 264px;
+    padding: 32px 16px;
+    box-sizing: border-box;
+  }
 
-.portfolio-subtitle {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2E2F42;
-}
+  .team-subtitle {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+    margin-bottom: 8px;
+  }
 
-.portfolio-subtitle-desc {
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-}
+  .team-subtitle-desc {
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
 
-.footer {
-  padding: 100px 15px;
-  background-color: #2E2F42
-}
+  .portfolio {
+    min-width: 1128px;
+    padding: 120px 0;
+  }
 
-.footer-logo {
-  display: inline-block;
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #4d5ae5;
-  margin-bottom: 16px;
-}
+  .portfolio-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2E2F42;
+    text-transform: capitalize;
+    margin-bottom: 72px;
+  }
 
-.footer-logo-accent {
-  color: #f4f4fd;
-}
+  .portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 48px 24px;
 
-.footer-desc {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #f4f4fd;
-  width: 264px;
-  height: 72px;
-}
+  }
+
+  .portfolio-list-item {
+    background-color: #fff;
+    flex-basis: calc((100% - 48px) / 3);
+    border-radius: 0px 0px 4px 4px;
+  }
+
+  .card-desc {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    padding: 32px 16px;
+
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
+    padding: 32px 0px;
+    width: 360px;
+    height: 120px;
+  }
+
+  .portfolio-subtitle {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+    margin-bottom: 8px;
+  }
+
+  .portfolio-subtitle-desc {
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
+
+  .footer {
+    padding: 100px 0;
+    background-color: #2E2F42
+  }
+
+  .footer-logo {
+    display: inline-block;
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+    margin-bottom: 16px;
+  }
+
+  .footer-logo-accent {
+    color: #f4f4fd;
+  }
+
+  .footer-desc {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    width: 264px;
+    height: 72px;
+  }
