--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,7 @@ img {
 }
 
 .button {
+  display: block;
   background-color: #4D5AE5;
   font-weight: 500;
   font-size: 16px;
@@ -150,13 +151,6 @@ img {
   margin: 0 auto;
 }
 
-.main-button {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-direction: row;
-  gap: 10px;
-}
 
 .main-button:hover,
 .main-button:focus {
@@ -164,7 +158,7 @@ img {
 }
 
 .features {
-  padding: 188px 0;
+  padding: 120px 0;
 }
 
 .visually-hidden {
@@ -191,7 +185,6 @@ img {
   align-items: flex-start;
   justify-content: flex-start;
   flex-direction: column;
-  gap: 8px;
 
 
 }
@@ -202,6 +195,7 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2E2F42;
+  margin-bottom: 8px;
 }
 
 .features-desc {
@@ -238,12 +232,13 @@ img {
 
 .team-list-item {
   background-color: #fff;
+  border-radius: 0px 0px 4px 4px;
 }
 
 .desc {
   text-align: center;
   width: 264px;
-  padding: 32px 16px;
+  padding: 32px 0px;
   box-sizing: border-box;
 }
 
@@ -287,7 +282,6 @@ img {
 .portfolio-list-item {
   background-color: #fff;
   flex-basis: calc((100% - 48px) / 3);
-  border-radius: 0px 0px 4px 4px;
 }
 
 .card-desc {
